# gaussian_rasterizer

./: CMakeLists.txt  README.md  main.cpp  setup.py
cuda_rasterizer/: backward.cu
gaussian_rasterizer/: __init__.py
